[project]
name = "reddit-eating-d"
version = "0.1.0"
description = ""
authors = [
    {name = "desoumyajit99",email = "soumyajit7a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "praw (>=7.8.1,<8.0.0)",
    "boto3 (>=1.40.8,<2.0.0)",
    "awscli (>=1.42.8,<2.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "datetime (>=5.5,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
